examples/test/testpolicy19024.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19024
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key39: value31
      key48: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value38
          key13: value6
          key40: value32
      podSelector:
        matchLabels:
          key19: value37
          key20: value49
          key23: value43
